# GOSH-FHIRworks2020-datamaskgen

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  api.cc  main.cc  main.cpp
cache/: patients.json
dependencies/: CMakeLists.txt
patient/: address.hh  encoding.hh  geolocation.hh  identifier.hh  identifier_type.hh  language.hh  name.hh  patient.hh  telecom.hh
src/: CMakeLists.txt  address_generator.hh  api.cc  api.hh  db.hh  generator.hh  main.cc  masker.hh  name_generator.hh  name_library.hh
src/api/: api.hh  api_config.hh
src/cli/: cli.hh
src/config/: config.hh
src/filter/: filter.hh
src/generator/: address_generator.hh  birthday_generator.hh  extension_generator.hh  gender_generator.hh  generator.hh  generator_random.hh  generator_with_weight.hh  identifier_generator.hh  language_generator.hh  marital_status_generator.hh  multiple_birth_generator.hh  name_generator.hh  name_library.hh  telecom_generator.hh
src/masker/: masker.hh
src/patient/: address.hh  encoding.hh  gender.hh  geolocation.hh  identifier.hh  identifier_type.hh  language.hh  marital_status.hh  name.hh  patient.hh  telecom.hh
test/: test_api.cc  test_config.hh  test_generator.cc  test_main.cc  test_masker.cc
test/generator/: test_generator.cc
